# django-tests

./: Makefile  README.md  pyproject.toml
core/: settings.py  urls.py
main/: models.py
main/migrations/: 0001_initial.py
main/templates/: base.html
main/templates/main/datatable_examples/: datatable_long_load.html
main/urls/datatable_examples/: datatable_urls.py
main/views/datatable_examples/: datatable_views.py
