[tool.poetry]
name = "django-tests"
version = "0.1.0"
description = ""
authors = ["Francisco <vieirafrancisco.dev@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"

[tool.poetry.dev-dependencies]
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
